build my devbox image

--- a/.github/workflows/build-boxkit.yml
+++ b/.github/workflows/build-boxkit.yml
@@ -28,7 +28,8 @@ jobs:
       fail-fast: false
       matrix:
         containerfile: 
-          - boxkit
+          # - boxkit
+          - devbox
        #- fedora-example # Included as an example to demonstrate multi-image builds, uncomment to build the fedora-example container too
     steps:
       # Clone code to runner
